Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57600

GOAWAY frame is handled incorrectly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9
    • 5.8.0 Alpha
    • Network: HTTP
    • None
    • 1636f3bc9294cb3f3612bcc02bd3be305fb3f707

    Description

      Found while testing Apple's APN HTTP/2-based API. The scenario is: using a development SSL certificate I'm connecting to the production server.
      Somehow they allow me to connect with such a certificate, but then, before I send any request (and this means before I've created any stream yet) they immediately send me GOAWAY on stream 0, which is allowed by the protocol. Due to incorrect logic in 'handleGOAWAY' I treat this as a PROTOCOL_ERROR and report this as the server sending us something wrong, while it's not.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes